@@ -5,56 +5,56 @@ import io.swagger.v3.oas.models.ExternalDocumentation;
 import io.swagger.v3.oas.models.OpenAPI;
 import io.swagger.v3.oas.models.info.Info;
 import io.swagger.v3.oas.models.info.License;
+import io.swagger.v3.oas.models.security.SecurityRequirement;
 import io.swagger.v3.oas.models.security.SecurityScheme;
 import io.swagger.v3.oas.models.servers.Server;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
 public class OpenAPIConfiguration {
+    private static final String SECURITY_SCHEME_NAME = "Bearer Authentication";
+
     @Bean
     public OpenAPI ludolify() {
         return new OpenAPI()
-                .info(info())
-                .externalDocs(new ExternalDocumentation()
-                        .description("You Can Refer to The Product Server Wiki Documentation")
-                        .url("null"))
-                .servers(servers())
-                .components(component());
+                .info(apiInfo())
+                .externalDocs(externalDocs())
+                .servers(apiServers())
+                .components(components())
+                .security(List.of(new SecurityRequirement().addList(SECURITY_SCHEME_NAME)));
     }
 
-    private Info info() {
-        Info info = new Info();
-        info.setTitle("Ludolify API");
-        info.setVersion("1.0.0");
-        License license = new License();
-        license.setName("Apache 2.0");
-        license.setUrl("https://www.apache.org/licenses/LICENSE-2.0.html");
-        info.setLicense(license);
-        return info;
+    private Info apiInfo() {
+        return new Info()
+                .title("Ludolify API")
+                .version("1.0.0")
+                .license(new License()
+                        .name("Apache 2.0")
+                        .url("https://www.apache.org/licenses/LICENSE-2.0.html"));
     }
 
-    private List<Server> servers() {
-        return Arrays.asList(
+    private ExternalDocumentation externalDocs() {
+        return new ExternalDocumentation()
+                .description("You Can Refer to The Product Server Wiki Documentation")
+                .url("null");
+    }
+
+    private List<Server> apiServers() {
+        return List.of(
                 new Server().url("https://ludolify.onrender.com").description("Render Server"),
-                new Server().url("http://localhost:8080").description("Local server")
+                new Server().url("http://localhost:8080").description("Local Server")
         );
     }
 
-    private Components component() {
-        final String securitySchemeName = "Bearer Authentication";
-        Components components = new Components();
-        components.addSecuritySchemes(securitySchemeName,
-                new SecurityScheme()
-                        .name(securitySchemeName)
+    private Components components() {
+        return new Components()
+                .addSecuritySchemes(SECURITY_SCHEME_NAME, new SecurityScheme()
+                        .name(SECURITY_SCHEME_NAME)
                         .type(SecurityScheme.Type.HTTP)
                         .scheme("bearer")
-                        .bearerFormat("JWT")
-        );
-
-        return components;
+                        .bearerFormat("JWT"));
     }
 }
